# Tournament_Simulator

./: CMakeLists.txt  README.md  compile_run.bat  jugadores.txt  run.bat
include/: bracket.h  luck_checker.h  player.h  player_queue.h
src/: bracket.cpp  luck_checker.cpp  main.cpp  player_queue.cpp  text_utils.cpp
utils/: text_utils.h
